@@ -357,9 +357,8 @@ file_null(struct bu_vls *msg, size_t argc, const char **argv, void *set_var)
 
     if (bu_file_exists(argv[0], NULL)) {
 	if (msg) {
-	    bu_vls_sprintf(msg, "Error - file %s already exists!\n", argv[0]);
+	    bu_vls_sprintf(msg, "Note - file %s already exists, appending conversion output\n", argv[0]);
 	}
-	return -1;
     }
 
     if (file_set)
